This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

02-Jan-2003 (Lars Duening)  (3.3.345)
  - (xalloc.c) Freeing unreferenced memory didn't adjust the xalloc_stat
       statistic.

02-Jan-2003 (Lars Duening)  (3.3.344)
  - (many files): Improved and reworte the struct implementation.

30-Dec-2002 (Lars Duening)  (3.3.343)
  - (configure, ptmalloc/, xalloc.c) Gawain adapted the threadsafe
       ptmalloc2 for use with the driver (GC not supported yet).
  - (smalloc.c) Removed the code for the double-linked freelist handling
       of large blocks - nobody was using it anymore.

28-Dec-2002 (Lars Duening)  (3.3.342)
  - (object.c) When saving lfun closures, the function name was looked
       up in the wrong program (reported by Dafire).

24-Dec-2002 (Lars Duening)  (3.3.341)
  - (xalloc.c) Clarified the role of REPLACE_MALLOC (prompted by Gawain).

24-Dec-2002 (Lars Duening)  (3.3.340)
  - (mregex.c) Efun regreplace() didn't check if for a '\<int>' replacement
      pattern the destinated subexpression match existed (reported by Zonk).

20-Dec-2002 (Lars Duening)  (3.3.338, .339)
  - (lex.c) Added a workaround for an optimizer bug in Cygwin (reported
      by Zonk).

20-Dec-2002 (Lars Duening)  (3.3.337)
  - (actions.c) Throw an error if H_NOTIFY_FAIL hook is missing. This also
      prevents the driver from crashing if the H_SEND_NOTIFY hook is
      defined (reported by Zonk).

18-Dec-2002 (Lars Duening)  (3.3.336)
  - (xalloc.c) The max_malloced tracing forgot to count down the allocated
      size on xfree()s (reported by Dafire).

18-Dec-2002 (Lars Duening)  (3.3.335)
  - (object.c) When calling privilege_violation() for restoring efuns,
      the current object is passed as 'who' argument (suggested by Gnomi).

17-Dec-2002 (Lars Duening)  (3.3.334)
  - (lex, object.c) restore_svalue() did not check if a restored efun was