@@ -35,12 +35,12 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 345)
-(Parent-Version lpmud 3-3 344)
-(Version-Log "Corrected the xalloc_stat statistics in GCs.")
+(Project-Version lpmud 3-3 346)
+(Parent-Version lpmud 3-3 345)
+(Version-Log "Corrected a compilation error.")
 (New-Version-Log
 "")
-(Checkin-Time "Thu, 02 Jan 2003 17:42:11 -0700")
+(Checkin-Time "Fri, 03 Jan 2003 21:54:23 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -77,7 +77,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.8 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.56 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.408 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.409 644))
   (HISTORY (lpmud/f/49_HISTORY 1.294 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.19 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -158,7 +158,7 @@
   (src/files.c (lpmud/i/50_files.c 1.19 644))
   (src/filestat.h (lpmud/f/51_filestat.h 1.7 644))
   (src/gcollect.h (lpmud/f/33_gcollect.h 1.6.1.13 644))
-  (src/gcollect.c (lpmud/c/30_gcollect.c 1.41.1.87 644))
+  (src/gcollect.c (lpmud/c/30_gcollect.c 1.41.1.88 644))
   (src/hash.h (lpmud/f/32_hash.h 1.5 644))
   (src/hash.c (lpmud/c/28_hash.c 1.15 644))
   (src/heartbeat.h (lpmud/m/41_heartbeat. 1.6.1.5 644))
