@@ -1,6 +1,9 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+03-Jan-2003 (Lars Duening)  (3.3.346)
+  - (gcollect.c) The struct display code still used SMALLOC_OVERHEAD.
+
 02-Jan-2003 (Lars Duening)  (3.3.345)
   - (xalloc.c) Freeing unreferenced memory didn't adjust the xalloc_stat
        statistic.
